--- a/index.html
+++ b/index.html
@@ -2,141 +2,164 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Dolce Parma</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Dolce Parma</title>
 </head>
 
 <body>
-    <header>
-        <nav class="navbar fixed-top navbar-expand-lg ">
-            <div class="container-fluid">
+  <header>
+    <nav class="navbar fixed-top navbar-expand-lg ">
+      <div class="container-fluid">
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Sobre mi</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Sobre mi</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="seccion1">
+      <div class="logo">
+        <img src="imagenes/image1.png" alt="logo" width="300px">
+      </div>
+      <p class="container">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed esse maiores error
+        sequi sunt harum voluptatibus quidem delectus dignissimos aliquam, ipsa doloremque mollitia quae cumque
+        reprehenderit perspiciatis quasi iusto omnis.
+        Expedita veniam et hic totam distinctio voluptates ad commodi quibusdam saepe, neque facilis molestiae
+        eum libero incidunt maiores quidem repellendus perferendis nobis deserunt, repudiandae eos. Ipsa
+        distinctio animi deserunt atque.
+        Dolor reiciendis ea, repellendus ullam voluptatem beatae corrupti consectetur recusandae voluptas
+        exercitationem, maxime iure vel iste blanditiis. Libero optio facilis, aperiam quaerat corrupti fugiat
+        fugit adipisci in aspernatur temporibus sequi!</p>
+
+    </section>
+
+    
+    <section class="cards">
+      <h2 class="text-center">Productos</h2>
+      <div class="row row-cols-1 row-cols-md-4 g-4 container">
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/image1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
             </div>
-        </nav>
-    </header>
-    <main>
-        <section class="seccion1">
-            <div class="logo">
-                <img src="imagenes/image1.png" alt="logo" width="300px">
-
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/image1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
             </div>
-            <p class="container fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed esse maiores error
-                sequi sunt harum voluptatibus quidem delectus dignissimos aliquam, ipsa doloremque mollitia quae cumque
-                reprehenderit perspiciatis quasi iusto omnis.
-                Expedita veniam et hic totam distinctio voluptates ad commodi quibusdam saepe, neque facilis molestiae
-                eum libero incidunt maiores quidem repellendus perferendis nobis deserunt, repudiandae eos. Ipsa
-                distinctio animi deserunt atque.
-                Dolor reiciendis ea, repellendus ullam voluptatem beatae corrupti consectetur recusandae voluptas
-                exercitationem, maxime iure vel iste blanditiis. Libero optio facilis, aperiam quaerat corrupti fugiat
-                fugit adipisci in aspernatur temporibus sequi!</p>
-
-        </section>
-        <section class="cards">
-            <div class="row row-cols-1 row-cols-md-4 g-4 container">
-                <div class="col">
-                  <div class="card">
-                    <img src="imagenes/image1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card">
-                    <img src="imagenes/image1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card">
-                    <img src="imagenes/image1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card">
-                    <img src="imagenes/image1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card">
-                    <img src="imagenes/image1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card">
-                    <img src="imagenes/image1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card">
-                    <img src="imagenes/image1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card">
-                    <img src="imagenes/image1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-        </section>
-    </main>
-    <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/image1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/image1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/image1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/image1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/image1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/image1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="sobreMi">
+      <div class="container">
+        <h2 class="text-center">Sobre mi</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim laborum inventore modi nihil, quos beatae a.
+          Modi est vitae aut possimus non odio, nemo fuga adipisci voluptatum suscipit repellendus aliquam.
+          In quis minima repudiandae nisi exercitationem optio tenetur fugit? Necessitatibus sit facilis illum placeat
+          cum officia, eum maiores iusto delectus nostrum, voluptas maxime in quibusdam hic aut, animi natus voluptatum.
+          Animi, sequi accusamus voluptate aut nostrum vitae atque accusantium ducimus quo exercitationem, assumenda
+          nobis aspernatur unde ab. Praesentium, saepe, vero quo explicabo perferendis voluptate rem earum eligendi,
+          deleniti dolores aliquam!
+          </p>
+      </div>
+    </section>
+  </main>
+  <footer></footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
