--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
@@ -13,7 +16,7 @@
 
 <body>
   <header>
-    <nav class="navbar fixed-top navbar-expand-lg ">
+    <nav class="navbar navbar-light fixed-top navbar-expand-lg ">
       <div class="container-fluid">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -56,87 +59,89 @@
 
     </section>
 
-    
-    <section class="cards">
+
+    <section class="productos">
       <h2 class="text-center">Productos</h2>
-      <div class="row row-cols-1 row-cols-md-4 g-4 container">
-        <div class="col">
-          <div class="card">
-            <img src="imagenes/image1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+      <div class="cards">
+        <div class="row row-cols-1 row-cols-md-4 g-4 container cards">
+          <div class="col">
+            <div class="card">
+              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="imagenes/image1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+          <div class="col">
+            <div class="card">
+              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="imagenes/image1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content.</p>
+          <div class="col">
+            <div class="card">
+              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="imagenes/image1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+          <div class="col">
+            <div class="card">
+              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="imagenes/image1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+          <div class="col">
+            <div class="card">
+              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="imagenes/image1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+          <div class="col">
+            <div class="card">
+              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="imagenes/image1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+          <div class="col">
+            <div class="card">
+              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="imagenes/image1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+          <div class="col">
+            <div class="card">
+              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+              </div>
             </div>
           </div>
         </div>
@@ -152,11 +157,111 @@
           Animi, sequi accusamus voluptate aut nostrum vitae atque accusantium ducimus quo exercitationem, assumenda
           nobis aspernatur unde ab. Praesentium, saepe, vero quo explicabo perferendis voluptate rem earum eligendi,
           deleniti dolores aliquam!
-          </p>
+        </p>
       </div>
     </section>
   </main>
-  <footer></footer>
+  <footer
+  class="text-center text-lg-start text-white"  >
+<!-- Grid container -->
+<div class="container p-4 pb-0">
+<!-- Section: Links -->
+<section class="">
+<!--Grid row-->
+<div class="row">
+  <!-- Grid column -->
+  <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+    <h6 class="text-uppercase mb-4 font-weight-bold">
+      Company name
+    </h6>
+    <p>
+      Here you can use rows and columns to organize your footer
+      content. Lorem ipsum dolor sit amet, consectetur adipisicing
+      elit.
+    </p>
+  </div>
+  <!-- Grid column -->
+
+  <hr class="w-100 clearfix d-md-none" />
+
+  <!-- Grid column -->
+  <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+    <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+    <p>
+      <a class="text-white">MDBootstrap</a>
+    </p>
+    <p>
+      <a class="text-white">MDWordPress</a>
+    </p>
+    <p>
+      <a class="text-white">BrandFlow</a>
+    </p>
+    <p>
+      <a class="text-white">Bootstrap Angular</a>
+    </p>
+  </div>
+  <!-- Grid column -->
+
+  <hr class="w-100 clearfix d-md-none" />
+
+  <!-- Grid column -->
+  <hr class="w-100 clearfix d-md-none" />
+
+  <!-- Grid column -->
+  <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+    <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+    <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+    <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+    <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+    <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+  </div>
+  <!-- Grid column -->
+
+  <!-- Grid column -->
+  <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+    <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+
+    <!-- Facebook -->
+    <a
+       class="btn btn-floating m-1"
+       style="background-color: #3b5998"
+       href="#!"
+       role="button"
+       ><i class="fab fa-facebook-f"></i
+      ></a>
+
+    <!-- Instagram -->
+    <a
+       class="btn btn-floating m-1"
+       style="background-color: #ac2bac"
+       href="#!"
+       role="button"
+       ><i class="fab fa-instagram"></i
+      ></a>
+  </div>
+</div>
+<!--Grid row-->
+</section>
+<!-- Section: Links -->
+</div>
+<!-- Grid container -->
+
+<!-- Copyright -->
+<div
+ class="text-center p-3"
+ style="background-color: rgba(0, 0, 0, 0.2)"
+ >
+© 2021 Copyright:
+<a class="text-white" href="https://github.com/rodridega"
+ >Deganutti Rodrigo</a
+>
+</div>
+<!-- Copyright -->
+</footer>
+   
+  
+
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
