arreglando cards, cambiando textos del footer

--- a/index.html
+++ b/index.html
@@ -63,14 +63,13 @@
     <section class="productos">
       <h2 class="text-center">Productos</h2>
       <div class="cards">
-        <div class="row row-cols-1 row-cols-md-4 g-4 container cards">
+        <div class="row row-cols-2 row-cols-md-4 g-4 container cards">
           <div class="col">
             <div class="card">
               <img src="imagenes/image1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title">Cartuchera</h5>
+                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
               </div>
             </div>
           </div>
@@ -78,9 +77,8 @@
             <div class="card">
               <img src="imagenes/image1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title">Cartuchera</h5>
+                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
               </div>
             </div>
           </div>
@@ -88,9 +86,8 @@
             <div class="card">
               <img src="imagenes/image1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title">Cartuchera</h5>
+                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
               </div>
             </div>
           </div>
@@ -98,9 +95,8 @@
             <div class="card">
               <img src="imagenes/image1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title">Cartuchera</h5>
+                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
               </div>
             </div>
           </div>
@@ -108,9 +104,8 @@
             <div class="card">
               <img src="imagenes/image1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title">Cartuchera</h5>
+                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
               </div>
             </div>
           </div>
@@ -118,9 +113,8 @@
             <div class="card">
               <img src="imagenes/image1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title">Cartuchera</h5>
+                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
               </div>
             </div>
           </div>
@@ -128,9 +122,8 @@
             <div class="card">
               <img src="imagenes/image1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title">Cartuchera</h5>
+                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
               </div>
             </div>
           </div>
@@ -138,9 +131,8 @@
             <div class="card">
               <img src="imagenes/image1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title">Cartuchera</h5>
+                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
               </div>
             </div>
           </div>
@@ -172,12 +164,12 @@
   <!-- Grid column -->
   <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
     <h6 class="text-uppercase mb-4 font-weight-bold">
-      Company name
+      Dolce Parma
     </h6>
     <p>
-      Here you can use rows and columns to organize your footer
-      content. Lorem ipsum dolor sit amet, consectetur adipisicing
-      elit.
+      Diseño independiente.
+      <br>
+      San Benito. Entre Ríos . Argentina
     </p>
   </div>
   <!-- Grid column -->
@@ -186,18 +178,18 @@
 
   <!-- Grid column -->
   <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-    <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+    <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
     <p>
-      <a class="text-white">MDBootstrap</a>
+      <a class="text-white">Portacosmeticos</a>
     </p>
     <p>
-      <a class="text-white">MDWordPress</a>
+      <a class="text-white">Cartucheras</a>
     </p>
     <p>
-      <a class="text-white">BrandFlow</a>
+      <a class="text-white">Porta termos</a>
     </p>
     <p>
-      <a class="text-white">Bootstrap Angular</a>
+      <a class="text-white">Muchas cosas mas!</a>
     </p>
   </div>
   <!-- Grid column -->
@@ -209,11 +201,11 @@
 
   <!-- Grid column -->
   <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-    <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-    <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-    <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
-    <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-    <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+    <h6 class="text-uppercase mb-4 font-weight-bold">Contactanos</h6>
+    <p><i class="fas fa-home mr-3"></i> "Tu direccion"</p>
+    <p><i class="fas fa-envelope mr-3"></i> "tu email"</p>
+    <p><i class="fas fa-phone mr-3"></i> "telefonos"</p>
+    <p><i class="fas fa-print mr-3"></i> "telefonos"</p>
   </div>
   <!-- Grid column -->
 
