cambiando logo, colores, añado imagenes

--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
   </header>
   <main>
     <section class="seccion1">
-      <div class="logo">
-        <img src="imagenes/image1.png" alt="logo" width="300px">
-      </div>
-      <p class="container">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed esse maiores error
+
+       <!--  <p class="container">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed esse maiores error
         sequi sunt harum voluptatibus quidem delectus dignissimos aliquam, ipsa doloremque mollitia quae cumque
         reprehenderit perspiciatis quasi iusto omnis.
         Expedita veniam et hic totam distinctio voluptates ad commodi quibusdam saepe, neque facilis molestiae
@@ -55,8 +53,7 @@
         distinctio animi deserunt atque.
         Dolor reiciendis ea, repellendus ullam voluptatem beatae corrupti consectetur recusandae voluptas
         exercitationem, maxime iure vel iste blanditiis. Libero optio facilis, aperiam quaerat corrupti fugiat
-        fugit adipisci in aspernatur temporibus sequi!</p>
-
+        fugit adipisci in aspernatur temporibus sequi!</p>-->
     </section>
 
 
@@ -66,7 +63,7 @@
         <div class="row row-cols-2 row-cols-md-4 g-4 container cards">
           <div class="col">
             <div class="card">
-              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <img src="imagenes/producto (1).jpeg" class="card-img-top" alt="..." >
               <div class="card-body">
                 <h5 class="card-title">Cartuchera</h5>
                 <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
@@ -75,7 +72,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <img src="imagenes/producto (2).jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Cartuchera</h5>
                 <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
@@ -84,7 +81,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <img src="imagenes/producto (3).jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Cartuchera</h5>
                 <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
@@ -93,7 +90,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <img src="imagenes/producto (4).jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Cartuchera</h5>
                 <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
@@ -102,7 +99,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <img src="imagenes/producto (5).jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Cartuchera</h5>
                 <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
@@ -111,7 +108,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <img src="imagenes/producto (6).jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Cartuchera</h5>
                 <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
@@ -120,7 +117,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <img src="imagenes/producto (7).jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Cartuchera</h5>
                 <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
@@ -129,7 +126,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="imagenes/image1.png" class="card-img-top" alt="...">
+              <img src="imagenes/producto (8).jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Cartuchera</h5>
                 <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
@@ -154,7 +151,7 @@
     </section>
   </main>
   <footer
-  class="text-center text-lg-start text-white"  >
+  class="text-center text-lg-start text-black"  >
 <!-- Grid container -->
 <div class="container p-4 pb-0">
 <!-- Section: Links -->
@@ -180,16 +177,16 @@
   <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
     <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
     <p>
-      <a class="text-white">Portacosmeticos</a>
+      <a class="text-black">Portacosmeticos</a>
     </p>
     <p>
-      <a class="text-white">Cartucheras</a>
+      <a class="text-black">Cartucheras</a>
     </p>
     <p>
-      <a class="text-white">Porta termos</a>
+      <a class="text-black">Porta termos</a>
     </p>
     <p>
-      <a class="text-white">Muchas cosas mas!</a>
+      <a class="text-black">Muchas cosas mas!</a>
     </p>
   </div>
   <!-- Grid column -->
