--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
+          <ul class="navbar-nav ">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Inicio</a>
             </li>
@@ -42,6 +42,85 @@
       </div>
     </nav>
   </header>
+  <section class="productos">
+    <h2 class="text-center">Productos</h2>
+    <div class="cards">
+      <div class="row row-cols-2 row-cols-md-4 g-4 container cards">
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/producto (1).jpeg" class="card-img-top" alt="..." >
+            <div class="card-body">
+              <h5 class="card-title">Cartuchera</h5>
+              <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/producto (2).jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cartuchera</h5>
+              <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/producto (3).jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cartuchera</h5>
+              <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/producto (4).jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cartuchera</h5>
+              <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/producto (5).jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cartuchera</h5>
+              <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/producto (6).jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cartuchera</h5>
+              <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/producto (7).jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cartuchera</h5>
+              <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="imagenes/producto (8).jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cartuchera</h5>
+              <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <main>
     <section class="seccion1">
 
@@ -57,85 +136,7 @@
     </section>
 
 
-    <section class="productos">
-      <h2 class="text-center">Productos</h2>
-      <div class="cards">
-        <div class="row row-cols-2 row-cols-md-4 g-4 container cards">
-          <div class="col">
-            <div class="card">
-              <img src="imagenes/producto (1).jpeg" class="card-img-top" alt="..." >
-              <div class="card-body">
-                <h5 class="card-title">Cartuchera</h5>
-                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="imagenes/producto (2).jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cartuchera</h5>
-                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="imagenes/producto (3).jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cartuchera</h5>
-                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="imagenes/producto (4).jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cartuchera</h5>
-                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="imagenes/producto (5).jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cartuchera</h5>
-                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="imagenes/producto (6).jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cartuchera</h5>
-                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="imagenes/producto (7).jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cartuchera</h5>
-                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="imagenes/producto (8).jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cartuchera</h5>
-                <p class="card-text">Cartuchera tejida color rosa, con detalles en rojo</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    
     <section class="sobreMi">
       <div class="container">
         <h2 class="text-center">Sobre mi</h2>
@@ -254,6 +255,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
