--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </section>
   <main>
     <section class="seccion1">
-
+        <img src="imagenes/logo2.jpeg" id="logoMaquina">
        <!--  <p class="container">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed esse maiores error
         sequi sunt harum voluptatibus quidem delectus dignissimos aliquam, ipsa doloremque mollitia quae cumque
         reprehenderit perspiciatis quasi iusto omnis.
