--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             
           <div class="modal-footer d-flex justify-content-between">
               <button type="button" class="btn btn-primary">Agregar al carrito</button>
-              <button type="button" class="btn btn-primary">Cancelar</button>
+              <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cancelar</button>
           </div>
         </div>
       </div>
