--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-light fixed-top navbar-expand-lg d-flex">
+    <nav class="navbar navbar-light fixed-top navbar-expand-lg d-flex justify-content-between">
       <div class="col-md-4">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,10 +51,10 @@
                       <tr>
                         <th scope="col">Imagen</th>
                         <th scope="col">Nombre</th>
-                        <th scope="col">Precio</th>
+                        <th scope="col" >Precio</th>
                       </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="tbody">
                       
                     </tbody>
                   </table>
@@ -72,7 +72,7 @@
 
   </header>
   <main>
-    <section class="seccion1"></section>
+    <!-- <section class="seccion1"></section> -->
     <section class="productos">
       <h2 class="text-center">Productos</h2>
       <div class="cards">
@@ -197,9 +197,6 @@
               <p class="fs-4"></p>
               <p class="fs-5"></p>
             </div>
-            <p class="fs-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae non, debitis autem
-              repellendus alias aperiam doloribus omnis minima consequatur deleniti eos quos itaque numquam neque,
-              tempora quae, aut a. Sint?</p>
           </div>
         </div>
 
