Agregando Id con Date.now

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                           <th scope="col">Precio</th>
                         </tr>
                       </thead>
-                      <tbody id="tbody"></tbody>
+                      <tbody id="tbody">
+                        
+                      </tbody>
                     </table>
                     <div class="d-flex">
                       <a href="#" class="btn btn-danger" id="vaciarCarrito"
