--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>Dolce Parma</title>
   </head>
@@ -108,7 +109,8 @@
           <div
             class="row row-cols-2 row-cols-md-4 g-4 container cards"
             id="cards"
-          ></div>
+          >
+        </div>
         </div>
       </section>
 
