--- a/index.html
+++ b/index.html
@@ -17,17 +17,14 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-light fixed-top navbar-expand-lg d-flex justify-content-between">
+    <nav class="navbar navbar-dark navbar-expand-lg d-flex justify-content-between">
       <div class="col-md-4">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-            </li>
+          <ul class="navbar-nav fs-5 text-white">
             <li class="nav-item">
               <a class="nav-link" href="#">Productos</a>
             </li>
@@ -44,7 +41,7 @@
         <ul id="carritoList" class="m-0 p-0">
           <li class="nav-item dropdown fs-1">
             <a class="nav-link " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false"><i class="fa-solid fa-cart-shopping"></i></a>
+              aria-expanded="false"><i class="fa-solid fa-cart-shopping fs-2 text-white"></i></a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li>
                 <div id="carrito">
@@ -76,7 +73,7 @@
   <main>
     <!-- <section class="seccion1"></section> -->
     <section class="productos">
-      <h2 class="text-center">Productos</h2>
+      <h2 class="text-center fs-1">Productos</h2>
       <div class="cards">
         <div class="row row-cols-2 row-cols-md-4 g-4 container cards" id="cards">
 
