--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
           <ul id="carritoList" class="m-0 p-0">
             <li class="nav-item dropdown fs-1">
               <a
-                class="nav-link"
+                class="nav-link cart"
                 href="#"
                 id="navbarDropdown"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
-                ><i class="fa-solid fa-cart-shopping fs-2 text-dark"></i
-              ></a>
+              >
+                <i class="fa-solid fa-cart-shopping fs-1"></i>
+              </a>
+
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
                   <div id="carrito">
@@ -61,12 +63,12 @@
                       <tbody id="tbody"></tbody>
                     </table>
                     <div class="d-flex">
-                      <a
-                        href="#"
+                      <button
                         class="btn btn-danger text-white m-2"
                         id="vaciarCarrito"
-                        >Vaciar Carrito</a
                       >
+                        Vaciar Carrito
+                      </button>
                     </div>
                   </div>
                 </li>
@@ -76,7 +78,7 @@
         </div>
       </div>
     </header>
-    
+
     <main>
       <div
         id="carouselExampleIndicators"
