agrego spinner de carga hasta tener respuesta ajax

--- a/index.html
+++ b/index.html
@@ -154,8 +154,13 @@
         <div class="cards">
           <div
             class="row row-cols-2 row-cols-md-4 g-4 container cards"
-            id="cards"
-          ></div>
+            id="cards">
+            <div class="spinner">
+              <div class="bounce1"></div>
+              <div class="bounce2"></div>
+              <div class="bounce3"></div>
+            </div>
+        </div>
         </div>
       </section>
 
