add links to social networks

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         </ul>
         <div class="col-6 d-flex flex-column align-items-end">
           <div>
-            <a class="btn btn-floating m-1" href="#!" role="button"
+            <a class="btn btn-floating m-1" href="https://www.facebook.com/DolceParma2018/" role="button"
               ><i class="fab fa-facebook-f"></i
             ></a>
-            <a class="btn btn-floating m-1" href="#!" role="button"
+            <a class="btn btn-floating m-1" href="https://www.instagram.com/dolceparma2018/" role="button"
               ><i class="fab fa-instagram"></i
             ></a>
           </div>
@@ -130,24 +130,7 @@
             />
           </div>
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+        
       </div>
       <section class="productos">
         <h2 class="text-center fs-1">Productos</h2>
